# clogr

./: .gitmodules  CMakeLists.txt  README.md
include/clogr/: clogr.h
include/neonLog/: neonLog.h
src/: callbackSink.h  clog.cpp  clog.h  clogr.cpp  clogr.h  debug.cpp  debug.h  level.h  log.cpp  log.h  logger.cpp  logger.h  pattern.cpp  pattern.h
src/sinks/: basicSink.cpp  basicSink.h  fileSink.cpp  fileSink.h  inMemorySink.cpp  inMemorySink.h  sink.h
src/streams/: consoleStream.cpp  consoleStream.h  fileStream.cpp  fileStream.h  stream.h
src/timers/: scopeTimer.h  timer.h
tests/: main.cpp
